# IMAV2024

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  package.xml  ssh_code  ssh_code.pub
include/my_package/: MagnetController.h  UltrasoundSensor.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ultrasonic_sensor/share/ultrasonic_sensor/: package.dsv  package.ps1  package.sh
log/: latest_build
src/: MagnetController.cpp  UltrasoundSensor.cpp  main.cpp
