<package format="2">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>My ROS2 Package</description>
  <maintainer email="ziedbaizig123@gmail.com">User</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
